--- a/CAMERA gene set testing.Rmd
+++ b/CAMERA gene set testing.Rmd
@@ -72,13 +72,15 @@ load("RdataOutput/design.Rdata")#explant design matrix
 #set up the gene set for index. There are 11076 probes (8873 unique ones) BUT all of the PROBE_ID's (ILMN_xxx) are unique. This means that there are multiple PROBE_ID's per ENTREZ.
 
 
-gene.set<-list(as.character(CELLStt3$PROBE_ID))
+gene.set<-list(unique(as.character(CELLStt3$TargetID)))
+
+
 
 
 #IDs from eset: entrez ids from the data I'm analyzing (not the pre-determined gene set)
+identifiers = as.character(unique(fData(expressedProbes.lumi)[,"TargetID"]))
 
 
-identifiers = as.character(fData(expressedProbes.lumi)[,"PROBE_ID"])
 
 
 #make index with CELLStt3 probes and eset IDs
